Fixed some grid spacing issues with the library

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html {
 
 body {
   background-color: var(--dark-blue-bg);
-  color: var(--color-gray-300);
+  color: var(--color-gray-100);
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
@@ -43,7 +43,7 @@ body {
   justify-content: space-between;
   padding: 1rem 5rem;
   align-items: center;
-  background-color: #023047;
+  background-color: var(--light-navy);
   box-shadow: 0 4px 8px rgb(0, 0, 0, 0.1);
 }
 
@@ -82,13 +82,14 @@ button.read-button:hover {
 
 .library {
   display: grid;
-  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  grid-auto-rows: min-content;
   grid-column: 1;
   grid-row: 1/-1;
   gap: 2rem;
   transition: all 0.3s ease;
   font-size: 1.25rem;
-  align-items: start;
+  /* place-items: center; */
 }
 
 /* CARDS */
@@ -98,9 +99,11 @@ button.read-button:hover {
   background-color: var(--light-navy);
   color: var(--color-gray-300);
   border-radius: 0 1rem 1rem 0;
-  padding: 1rem ;
+  padding: 1rem;
   border-left: 1rem solid var(--custom-orange);
   transition: all 0.2s ease;
+  align-self: start;
+ 
 }
 .card:hover {
   box-shadow: 0 4px 8px rgb(255, 255, 255, 0.1);
@@ -112,14 +115,13 @@ button.read-button:hover {
   font-size: 1.125rem;
 }
 .card-text {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    justify-content: space-between;
-
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-left: 1rem;
 }
 .card-text p {
-    margin: 0;
+  margin: 0;
 }
 
 .delete-section {
@@ -130,7 +132,7 @@ button.read-button:hover {
 }
 .delete-button {
   all: unset;
-  background-color: var(--custom-orange);
+  background-color: rgb(209, 44, 44);
   padding: 0.5em 1em;
   color: white;
   font-size: 1em;
@@ -141,7 +143,7 @@ button.read-button:hover {
 
 .read-button {
   all: unset;
-  background-color: var(--custom-orange);
+  background-color: rgb(5, 171, 25);
   padding: 0.5em 1em;
   color: white;
   font-size: 1em;
